[gd_scene load_steps=7 format=2]

[ext_resource path="res://artAssets/bg.png" type="Texture" id=1]
[ext_resource path="res://artAssets/min_yaheiui.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/start/buttonStart.gd" type="Script" id=3]
[ext_resource path="res://artAssets/min_yaheiui_small.tres" type="DynamicFont" id=4]
[ext_resource path="res://scripts/start/startApp.gd" type="Script" id=6]

[sub_resource type="Theme" id=1]

[node name="startApp" type="Node2D"]
script = ExtResource( 6 )

[node name="bg" type="Sprite" parent="."]
position = Vector2( 0, -0.321272 )
scale = Vector2( 0.426667, 0.2995 )
texture = ExtResource( 1 )
offset = Vector2( 1200, 1001.07 )

[node name="title" type="Label" parent="."]
margin_left = 256.0
margin_top = 96.0
margin_right = 768.0
margin_bottom = 160.0
custom_colors/font_color = Color( 0.227451, 0.227451, 0.227451, 1 )
custom_fonts/font = ExtResource( 2 )
text = "撅世仅有的无标题超级无敌程序"
align = 1
valign = 1

[node name="version" type="Label" parent="."]
margin_left = 10.0
margin_top = 561.0
margin_right = 256.0
margin_bottom = 599.0
custom_colors/font_color = Color( 0.278431, 0.278431, 0.278431, 1 )
custom_fonts/font = ExtResource( 4 )
text = "ver.　{{Settings.version}}"
valign = 1

[node name="atom_H_count" type="Label" parent="."]
margin_left = 357.0
margin_top = 169.0
margin_right = 660.0
margin_bottom = 233.0
rect_pivot_offset = Vector2( -648, -164 )
custom_colors/font_color = Color( 0.898039, 0.282353, 0.282353, 1 )
custom_fonts/font = ExtResource( 2 )
text = "H原子数"
valign = 1

[node name="SpinBox" type="SpinBox" parent="atom_H_count"]
margin_left = 223.0
margin_top = 18.0
margin_right = 297.0
margin_bottom = 42.0

[node name="atom_O_count" type="Label" parent="."]
margin_left = 357.0
margin_top = 233.0
margin_right = 660.0
margin_bottom = 297.0
rect_pivot_offset = Vector2( -648, -164 )
custom_colors/font_color = Color( 0.121569, 0.403922, 1, 1 )
custom_fonts/font = ExtResource( 2 )
text = "O原子数"
valign = 1

[node name="SpinBox" type="SpinBox" parent="atom_O_count"]
margin_left = 223.0
margin_top = 18.0
margin_right = 297.0
margin_bottom = 42.0

[node name="CD_seconds" type="Label" parent="."]
margin_left = 357.0
margin_top = 297.0
margin_right = 660.0
margin_bottom = 361.0
rect_pivot_offset = Vector2( -648, -164 )
custom_colors/font_color = Color( 1, 1, 1, 0.482353 )
custom_fonts/font = ExtResource( 2 )
text = "生成冷却(s)"
valign = 1

[node name="SpinBox" type="SpinBox" parent="CD_seconds"]
margin_left = 223.0
margin_top = 18.0
margin_right = 297.0
margin_bottom = 42.0
max_value = 5.0
step = 0.01

[node name="probablity" type="Label" parent="."]
margin_left = 357.0
margin_top = 361.0
margin_right = 660.0
margin_bottom = 425.0
rect_pivot_offset = Vector2( -648, -164 )
custom_colors/font_color = Color( 1, 1, 1, 0.482353 )
custom_fonts/font = ExtResource( 2 )
text = "结合概率(0~1)"
valign = 1

[node name="SpinBox" type="SpinBox" parent="probablity"]
margin_left = 223.0
margin_top = 18.0
margin_right = 297.0
margin_bottom = 42.0
max_value = 1.0
step = 0.01

[node name="start" type="Button" parent="."]
margin_left = 320.0
margin_top = 448.0
margin_right = 704.0
margin_bottom = 512.0
theme = SubResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "Start_Fuck"
script = ExtResource( 3 )

[node name="wtf" type="Label" parent="."]
margin_left = 1088.0
margin_top = 682.0
margin_right = 1282.0
margin_bottom = 730.0
text = "What are you doing?
Don't do that, or I'll be fucked!
(wty sb)"

[connection signal="pressed" from="start" to="start" method="_on_start_pressed"]
